--- a/configs/3.ini
+++ b/configs/3.ini
@@ -1,7 +1,7 @@
 [Path]
-path = G:\è§†é¢‘\ç‹æ¢“å½¦åä½³.mp4
+path = G:\ÊÓÆµ\Íõè÷ÑåÊ®¼Ñ.mp4
 [Settings]
 mute = 1
-name = sss
+name = Íõè÷ÑåÓĞÃüÁîĞĞ
 [Extra]
-Cmd = 
+Cmd = wzyicmd
