--- a/configs/1.ini
+++ b/configs/1.ini
@@ -1,7 +1,7 @@
 [Path]
-path = G:\è§†é¢‘\ç‹æ¢“å½¦åä½³.mp4
+path = G:\ÊÓÆµ\Íõè÷ÑåÊ®¼Ñ.mp4
 [Settings]
 mute = 1
-name = 5
+name = Íõè÷Ñå¾²Òô
 [Extra]
 Cmd = 
