--- a/configs/2.ini
+++ b/configs/2.ini
@@ -1,7 +1,7 @@
 [Path]
-path = G:\è§†é¢‘\ç‹æ¢“å½¦åä½³.mp4
+path = G:\ÊÓÆµ\Íõè÷ÑåÊ®¼Ñ.mp4
 [Settings]
 mute = 0
-name = 2
+name = Íõè÷Ñå
 [Extra]
 Cmd = 
