--- a/wlppegnui/wlppegnui.vcxproj
+++ b/wlppegnui/wlppegnui.vcxproj
@@ -183,6 +183,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CConfigDlg.h" />
     <ClInclude Include="CinputDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
@@ -192,6 +193,7 @@
     <ClInclude Include="wlppegnuiDlg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CConfigDlg.cpp" />
     <ClCompile Include="CinputDlg.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
