--- a/wlppegnui/wlppegnui.vcxproj.filters
+++ b/wlppegnui/wlppegnui.vcxproj.filters
@@ -71,5 +71,8 @@
     <Image Include="res\wlppegnui.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\vw.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
